--- a/ejercicio_practica_1/index.html
+++ b/ejercicio_practica_1/index.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <section>
-   <article class="card">
-    <img src="../ejercicio_practica_1/img/notebook.png" alt="notebook">
-    <div>
-    <p class="price"> $ 85.299 </p>
+   <h1><strong>Producto:</strong></h1> 
+<div>
+    <img src="./images/celular.png" width="100px">
 </div>
 <div>
-    <p class="discount"> 21% OFF </p>
+<nav>
+<h3><small>$110.000</small></h3>
 </div>
-<button>COMPRAR</button>
-   </article>
-</section>
+<div>
+<h3><small>15% OFF</small></h3>
+</div>
+<div>
+<h3><small>Envio gratis</small></h3>
+</nav>
+</div>
 </body>
 </html>
