--- a/ejercicio_practica_1/index.html
+++ b/ejercicio_practica_1/index.html
@@ -3,23 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
-   <h1><strong>Producto:</strong></h1> 
-<div>
-    <img src="./images/celular.png" width="100px">
+    <section>
+   <article class="card">
+    <img src="./images/notebook.png" alt="notebook">
+    <div>
+    <p class="price"> $ 85.299 </p>
 </div>
 <div>
-<nav>
-<h3><small>$110.000</small></h3>
+    <p class="discount"> 21% OFF </p>
 </div>
-<div>
-<h3><small>15% OFF</small></h3>
-</div>
-<div>
-<h3><small>Envio gratis</small></h3>
-</nav>
-</div>
+<button>COMPRAR</button>
+   </article>
+</section>
 </body>
 </html>
