--- a/ejercicio_practica_2/index.html
+++ b/ejercicio_practica_2/index.html
@@ -10,8 +10,8 @@
     <section>
         <article class="card">
          <img src="./images/avatar-iconn.jpg" alt="persona" width="300px">
-         <h1><p class="Nombre"> Julia Diana Millassón </p></h1>
-         <h2><p class="DNI"> Doc: 20886319 </p></h2>
+         <h1 class="Nombre"> Julia Diana Millassón </h1>
+         <h2 class="DNI"> Doc: 20886319 </h2>
         </article>
     </section>
 </body>
